@@ -1,6 +1,6 @@
 {
   "name": "fxa-auth-db-mysql",
-  "version": "0.32.0",
+  "version": "0.33.0",
   "dependencies": {
     "ass": {
       "version": "1.0.0",
@@ -262,9 +262,9 @@
       }
     },
     "fxa-auth-db-server": {
-      "version": "0.32.0",
-      "from": "fxa-auth-db-server@git://github.com/mozilla/fxa-auth-db-server.git#train-32",
-      "resolved": "git://github.com/mozilla/fxa-auth-db-server.git#b36aff742fa5d2815a2e2f81ce403c98a21d7023",
+      "version": "0.33.0",
+      "from": "fxa-auth-db-server@git://github.com/mozilla/fxa-auth-db-server.git#train-33",
+      "resolved": "git://github.com/mozilla/fxa-auth-db-server.git#f3d111b3f895a4f6c9bb76efc80e505b52eed074",
       "dependencies": {
         "restify": {
           "version": "2.8.2",
@@ -335,14 +335,14 @@
                   "resolved": "https://registry.npmjs.org/csv-generate/-/csv-generate-0.0.4.tgz"
                 },
                 "csv-parse": {
-                  "version": "0.0.6",
-                  "from": "https://registry.npmjs.org/csv-parse/-/csv-parse-0.0.6.tgz",
-                  "resolved": "https://registry.npmjs.org/csv-parse/-/csv-parse-0.0.6.tgz"
+                  "version": "0.0.9",
+                  "from": "https://registry.npmjs.org/csv-parse/-/csv-parse-0.0.9.tgz",
+                  "resolved": "https://registry.npmjs.org/csv-parse/-/csv-parse-0.0.9.tgz"
                 },
                 "stream-transform": {
-                  "version": "0.0.6",
-                  "from": "https://registry.npmjs.org/stream-transform/-/stream-transform-0.0.6.tgz",
-                  "resolved": "https://registry.npmjs.org/stream-transform/-/stream-transform-0.0.6.tgz"
+                  "version": "0.0.7",
+                  "from": "https://registry.npmjs.org/stream-transform/-/stream-transform-0.0.7.tgz",
+                  "resolved": "https://registry.npmjs.org/stream-transform/-/stream-transform-0.0.7.tgz"
                 },
                 "csv-stringify": {
                   "version": "0.0.6",
@@ -352,19 +352,19 @@
               }
             },
             "deep-equal": {
-              "version": "0.2.1",
-              "from": "https://registry.npmjs.org/deep-equal/-/deep-equal-0.2.1.tgz",
-              "resolved": "https://registry.npmjs.org/deep-equal/-/deep-equal-0.2.1.tgz"
+              "version": "0.2.2",
+              "from": "https://registry.npmjs.org/deep-equal/-/deep-equal-0.2.2.tgz",
+              "resolved": "https://registry.npmjs.org/deep-equal/-/deep-equal-0.2.2.tgz"
             },
             "escape-regexp-component": {
               "version": "1.0.2",
-              "from": "escape-regexp-component@1.0.2",
+              "from": "https://registry.npmjs.org/escape-regexp-component/-/escape-regexp-component-1.0.2.tgz",
               "resolved": "https://registry.npmjs.org/escape-regexp-component/-/escape-regexp-component-1.0.2.tgz"
             },
             "formidable": {
-              "version": "1.0.16",
-              "from": "https://registry.npmjs.org/formidable/-/formidable-1.0.16.tgz",
-              "resolved": "https://registry.npmjs.org/formidable/-/formidable-1.0.16.tgz"
+              "version": "1.0.17",
+              "from": "https://registry.npmjs.org/formidable/-/formidable-1.0.17.tgz",
+              "resolved": "https://registry.npmjs.org/formidable/-/formidable-1.0.17.tgz"
             },
             "http-signature": {
               "version": "0.10.1",
@@ -394,9 +394,9 @@
               "resolved": "https://registry.npmjs.org/lru-cache/-/lru-cache-2.5.0.tgz"
             },
             "mime": {
-              "version": "1.2.11",
-              "from": "https://registry.npmjs.org/mime/-/mime-1.2.11.tgz",
-              "resolved": "https://registry.npmjs.org/mime/-/mime-1.2.11.tgz"
+              "version": "1.3.4",
+              "from": "https://registry.npmjs.org/mime/-/mime-1.3.4.tgz",
+              "resolved": "https://registry.npmjs.org/mime/-/mime-1.3.4.tgz"
             },
             "negotiator": {
               "version": "0.4.9",
@@ -431,9 +431,9 @@
               "resolved": "https://registry.npmjs.org/semver/-/semver-2.3.2.tgz"
             },
             "spdy": {
-              "version": "1.30.1",
-              "from": "https://registry.npmjs.org/spdy/-/spdy-1.30.1.tgz",
-              "resolved": "https://registry.npmjs.org/spdy/-/spdy-1.30.1.tgz"
+              "version": "1.30.2",
+              "from": "https://registry.npmjs.org/spdy/-/spdy-1.30.2.tgz",
+              "resolved": "https://registry.npmjs.org/spdy/-/spdy-1.30.2.tgz"
             },
             "tunnel-agent": {
               "version": "0.4.0",
@@ -541,7 +541,7 @@
               "dependencies": {
                 "minimist": {
                   "version": "0.0.8",
-                  "from": "minimist@0.0.8",
+                  "from": "https://registry.npmjs.org/minimist/-/minimist-0.0.8.tgz",
                   "resolved": "https://registry.npmjs.org/minimist/-/minimist-0.0.8.tgz"
                 }
               }
@@ -597,6 +597,35 @@
             "yamlish": {
               "version": "0.0.5",
               "from": "yamlish@*"
+            },
+            "tap-consumer": {
+              "version": "0.0.1",
+              "from": "https://registry.npmjs.org/tap-consumer/-/tap-consumer-0.0.1.tgz",
+              "resolved": "https://registry.npmjs.org/tap-consumer/-/tap-consumer-0.0.1.tgz",
+              "dependencies": {
+                "inherits": {
+                  "version": "2.0.1",
+                  "from": "https://registry.npmjs.org/inherits/-/inherits-2.0.1.tgz",
+                  "resolved": "https://registry.npmjs.org/inherits/-/inherits-2.0.1.tgz"
+                },
+                "tap-results": {
+                  "version": "0.0.2",
+                  "from": "https://registry.npmjs.org/tap-results/-/tap-results-0.0.2.tgz",
+                  "resolved": "https://registry.npmjs.org/tap-results/-/tap-results-0.0.2.tgz",
+                  "dependencies": {
+                    "inherits": {
+                      "version": "1.0.0",
+                      "from": "https://registry.npmjs.org/inherits/-/inherits-1.0.0.tgz",
+                      "resolved": "https://registry.npmjs.org/inherits/-/inherits-1.0.0.tgz"
+                    }
+                  }
+                },
+                "yamlish": {
+                  "version": "0.0.6",
+                  "from": "https://registry.npmjs.org/yamlish/-/yamlish-0.0.6.tgz",
+                  "resolved": "https://registry.npmjs.org/yamlish/-/yamlish-0.0.6.tgz"
+                }
+              }
             }
           }
         },
@@ -612,7 +641,7 @@
             },
             "blanket": {
               "version": "1.1.6",
-              "from": "https://registry.npmjs.org/blanket/-/blanket-1.1.6.tgz",
+              "from": "blanket@1.1.6",
               "resolved": "https://registry.npmjs.org/blanket/-/blanket-1.1.6.tgz",
               "dependencies": {
                 "esprima": {
@@ -641,7 +670,7 @@
             },
             "cheerio": {
               "version": "0.14.0",
-              "from": "https://registry.npmjs.org/cheerio/-/cheerio-0.14.0.tgz",
+              "from": "cheerio@0.14.0",
               "resolved": "https://registry.npmjs.org/cheerio/-/cheerio-0.14.0.tgz",
               "dependencies": {
                 "htmlparser2": {
@@ -660,10 +689,15 @@
                       "resolved": "https://registry.npmjs.org/domutils/-/domutils-1.5.1.tgz",
                       "dependencies": {
                         "dom-serializer": {
-                          "version": "0.0.1",
-                          "from": "https://registry.npmjs.org/dom-serializer/-/dom-serializer-0.0.1.tgz",
-                          "resolved": "https://registry.npmjs.org/dom-serializer/-/dom-serializer-0.0.1.tgz",
+                          "version": "0.1.0",
+                          "from": "https://registry.npmjs.org/dom-serializer/-/dom-serializer-0.1.0.tgz",
+                          "resolved": "https://registry.npmjs.org/dom-serializer/-/dom-serializer-0.1.0.tgz",
                           "dependencies": {
+                            "domelementtype": {
+                              "version": "1.1.3",
+                              "from": "https://registry.npmjs.org/domelementtype/-/domelementtype-1.1.3.tgz",
+                              "resolved": "https://registry.npmjs.org/domelementtype/-/domelementtype-1.1.3.tgz"
+                            },
                             "entities": {
                               "version": "1.1.1",
                               "from": "https://registry.npmjs.org/entities/-/entities-1.1.1.tgz",
@@ -674,9 +708,9 @@
                       }
                     },
                     "domelementtype": {
-                      "version": "1.1.3",
-                      "from": "https://registry.npmjs.org/domelementtype/-/domelementtype-1.1.3.tgz",
-                      "resolved": "https://registry.npmjs.org/domelementtype/-/domelementtype-1.1.3.tgz"
+                      "version": "1.3.0",
+                      "from": "https://registry.npmjs.org/domelementtype/-/domelementtype-1.3.0.tgz",
+                      "resolved": "https://registry.npmjs.org/domelementtype/-/domelementtype-1.3.0.tgz"
                     },
                     "readable-stream": {
                       "version": "1.1.13",
@@ -728,9 +762,9 @@
                       "resolved": "https://registry.npmjs.org/domutils/-/domutils-1.4.3.tgz",
                       "dependencies": {
                         "domelementtype": {
-                          "version": "1.1.3",
-                          "from": "https://registry.npmjs.org/domelementtype/-/domelementtype-1.1.3.tgz",
-                          "resolved": "https://registry.npmjs.org/domelementtype/-/domelementtype-1.1.3.tgz"
+                          "version": "1.3.0",
+                          "from": "https://registry.npmjs.org/domelementtype/-/domelementtype-1.3.0.tgz",
+                          "resolved": "https://registry.npmjs.org/domelementtype/-/domelementtype-1.3.0.tgz"
                         }
                       }
                     }
@@ -745,7 +779,7 @@
             },
             "temp": {
               "version": "0.8.1",
-              "from": "https://registry.npmjs.org/temp/-/temp-0.8.1.tgz",
+              "from": "temp@0.8.1",
               "resolved": "https://registry.npmjs.org/temp/-/temp-0.8.1.tgz",
               "dependencies": {
                 "rimraf": {
@@ -801,7 +835,7 @@
               "dependencies": {
                 "inherits": {
                   "version": "2.0.1",
-                  "from": "inherits@2",
+                  "from": "inherits@~2.0.1",
                   "resolved": "https://registry.npmjs.org/inherits/-/inherits-2.0.1.tgz"
                 },
                 "minimatch": {
@@ -1204,7 +1238,7 @@
       "dependencies": {
         "findup-sync": {
           "version": "0.1.3",
-          "from": "findup-sync@^0.1.2",
+          "from": "findup-sync@~0.1.2",
           "resolved": "https://registry.npmjs.org/findup-sync/-/findup-sync-0.1.3.tgz",
           "dependencies": {
             "glob": {
@@ -1267,7 +1301,7 @@
             },
             "minimatch": {
               "version": "0.3.0",
-              "from": "minimatch@^0.3.0",
+              "from": "minimatch@0.3",
               "resolved": "https://registry.npmjs.org/minimatch/-/minimatch-0.3.0.tgz",
               "dependencies": {
                 "lru-cache": {
@@ -1287,9 +1321,9 @@
       }
     },
     "mozlog": {
-      "version": "1.0.3",
-      "from": "mozlog@^1.0.3",
-      "resolved": "https://registry.npmjs.org/mozlog/-/mozlog-1.0.3.tgz",
+      "version": "2.0.0",
+      "from": "mozlog@2.0.0",
+      "resolved": "https://registry.npmjs.org/mozlog/-/mozlog-2.0.0.tgz",
       "dependencies": {
         "intel": {
           "version": "1.0.0",
@@ -1318,7 +1352,7 @@
                   "dependencies": {
                     "ansi-regex": {
                       "version": "0.2.1",
-                      "from": "ansi-regex@^0.2.0",
+                      "from": "ansi-regex@^0.2.1",
                       "resolved": "https://registry.npmjs.org/ansi-regex/-/ansi-regex-0.2.1.tgz"
                     }
                   }
@@ -1388,7 +1422,7 @@
         },
         "readable-stream": {
           "version": "1.1.13",
-          "from": "readable-stream@1.1",
+          "from": "readable-stream@~1.1.13",
           "resolved": "https://registry.npmjs.org/readable-stream/-/readable-stream-1.1.13.tgz",
           "dependencies": {
             "core-util-is": {
@@ -1431,9 +1465,9 @@
           "resolved": "https://registry.npmjs.org/async/-/async-0.9.0.tgz"
         },
         "bluebird": {
-          "version": "2.9.13",
+          "version": "2.9.14",
           "from": "bluebird@^2.3.0",
-          "resolved": "https://registry.npmjs.org/bluebird/-/bluebird-2.9.13.tgz"
+          "resolved": "https://registry.npmjs.org/bluebird/-/bluebird-2.9.14.tgz"
         },
         "clone": {
           "version": "0.1.19",
@@ -1464,7 +1498,7 @@
         },
         "mime": {
           "version": "1.2.11",
-          "from": "mime@~1.2.9",
+          "from": "mime@1.2.11",
           "resolved": "https://registry.npmjs.org/mime/-/mime-1.2.11.tgz"
         },
         "forever-agent": {
@@ -1660,7 +1694,7 @@
         },
         "mime": {
           "version": "1.2.11",
-          "from": "mime@~1.2.9",
+          "from": "mime@1.2.11",
           "resolved": "https://registry.npmjs.org/mime/-/mime-1.2.11.tgz"
         },
         "negotiator": {
