@@ -1,6 +1,6 @@
 {
   "name": "fxa-auth-db-mysql",
-  "version": "0.32.0",
+  "version": "0.33.0",
   "description": "MySQL backend for the fxa-auth-db-server",
   "main": "index.js",
   "repository": "mozilla/fxa-auth-db-mysql",
@@ -21,8 +21,8 @@
     "bluebird": "2.1.3",
     "clone": "0.2.0",
     "convict": "0.4.2",
-    "fxa-auth-db-server": "git://github.com/mozilla/fxa-auth-db-server.git#train-32",
-    "mozlog": "1.0.3",
+    "fxa-auth-db-server": "git://github.com/mozilla/fxa-auth-db-server.git#train-33",
+    "mozlog": "2.0.0",
     "mysql": "2.3.2",
     "request": "2.36.0"
   },
